// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render link button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    label="test"
    onPress={[MockFunction]}
    type="Link"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <Component
        style={
          Object {
            "color": "rgb(232, 49, 129)",
            "fontFamily": "Bariol-Regular",
            "fontSize": 32,
            "lineHeight": 46,
            "textAlign": "center",
          }
        }
      >
        test
      </Component>,
      "onPress": [MockFunction],
      "style": Object {
        "borderRadius": 100,
        "height": 100,
        "justifyContent": "center",
        "width": 612,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "test",
        "style": Object {
          "color": "rgb(232, 49, 129)",
          "fontFamily": "Bariol-Regular",
          "fontSize": 32,
          "lineHeight": 46,
          "textAlign": "center",
        },
      },
      "ref": null,
      "rendered": "test",
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Component
          style={
            Object {
              "color": "rgb(232, 49, 129)",
              "fontFamily": "Bariol-Regular",
              "fontSize": 32,
              "lineHeight": 46,
              "textAlign": "center",
            }
          }
        >
          test
        </Component>,
        "onPress": [MockFunction],
        "style": Object {
          "borderRadius": 100,
          "height": 100,
          "justifyContent": "center",
          "width": 612,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "test",
          "style": Object {
            "color": "rgb(232, 49, 129)",
            "fontFamily": "Bariol-Regular",
            "fontSize": 32,
            "lineHeight": 46,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "test",
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button should render primary button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    label="test"
    onPress={[MockFunction]}
    type="Primary"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <Component
        style={
          Object {
            "color": "white",
            "fontFamily": "Bariol-Regular",
            "fontSize": 36,
            "lineHeight": 80,
            "textAlign": "center",
          }
        }
      >
        test
      </Component>,
      "onPress": [MockFunction],
      "style": Object {
        "backgroundColor": "rgb(226,1,119)",
        "borderColor": "rgb(226,1,119)",
        "borderRadius": 100,
        "borderWidth": 2,
        "height": 100,
        "justifyContent": "center",
        "shadowColor": "#95012b",
        "shadowOffset": Object {
          "height": 8,
        },
        "shadowOpacity": 1,
        "shadowRadius": 1,
        "width": 612,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "test",
        "style": Object {
          "color": "white",
          "fontFamily": "Bariol-Regular",
          "fontSize": 36,
          "lineHeight": 80,
          "textAlign": "center",
        },
      },
      "ref": null,
      "rendered": "test",
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Component
          style={
            Object {
              "color": "white",
              "fontFamily": "Bariol-Regular",
              "fontSize": 36,
              "lineHeight": 80,
              "textAlign": "center",
            }
          }
        >
          test
        </Component>,
        "onPress": [MockFunction],
        "style": Object {
          "backgroundColor": "rgb(226,1,119)",
          "borderColor": "rgb(226,1,119)",
          "borderRadius": 100,
          "borderWidth": 2,
          "height": 100,
          "justifyContent": "center",
          "shadowColor": "#95012b",
          "shadowOffset": Object {
            "height": 8,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
          "width": 612,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "test",
          "style": Object {
            "color": "white",
            "fontFamily": "Bariol-Regular",
            "fontSize": 36,
            "lineHeight": 80,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "test",
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button should render primary button on Android 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    label="test"
    onPress={[MockFunction]}
    type="Primary"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "backgroundColor": "#95012b",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "paddingHorizontal": 170,
              "position": "absolute",
              "top": 8,
              "width": 612,
            }
          }
        />,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[MockFunction]}
          style={
            Object {
              "backgroundColor": "rgb(226,1,119)",
              "borderColor": "rgb(226,1,119)",
              "borderRadius": 100,
              "borderWidth": 2,
              "height": 100,
              "justifyContent": "center",
              "shadowColor": "#95012b",
              "shadowOffset": Object {
                "height": 8,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
              "width": 612,
            }
          }
        >
          <Component
            style={
              Object {
                "color": "white",
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 80,
                "textAlign": "center",
              }
            }
          >
            test
          </Component>
        </TouchableOpacity>,
      ],
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "style": Object {
            "backgroundColor": "#95012b",
            "borderRadius": 100,
            "height": 100,
            "justifyContent": "center",
            "paddingHorizontal": 170,
            "position": "absolute",
            "top": 8,
            "width": 612,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Component
            style={
              Object {
                "color": "white",
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 80,
                "textAlign": "center",
              }
            }
          >
            test
          </Component>,
          "onPress": [MockFunction],
          "style": Object {
            "backgroundColor": "rgb(226,1,119)",
            "borderColor": "rgb(226,1,119)",
            "borderRadius": 100,
            "borderWidth": 2,
            "height": 100,
            "justifyContent": "center",
            "shadowColor": "#95012b",
            "shadowOffset": Object {
              "height": 8,
            },
            "shadowOpacity": 1,
            "shadowRadius": 1,
            "width": 612,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "test",
            "style": Object {
              "color": "white",
              "fontFamily": "Bariol-Regular",
              "fontSize": 36,
              "lineHeight": 80,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "test",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "backgroundColor": "#95012b",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "paddingHorizontal": 170,
                "position": "absolute",
                "top": 8,
                "width": 612,
              }
            }
          />,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "backgroundColor": "rgb(226,1,119)",
                "borderColor": "rgb(226,1,119)",
                "borderRadius": 100,
                "borderWidth": 2,
                "height": 100,
                "justifyContent": "center",
                "shadowColor": "#95012b",
                "shadowOffset": Object {
                  "height": 8,
                },
                "shadowOpacity": 1,
                "shadowRadius": 1,
                "width": 612,
              }
            }
          >
            <Component
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 80,
                  "textAlign": "center",
                }
              }
            >
              test
            </Component>
          </TouchableOpacity>,
        ],
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "#95012b",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "paddingHorizontal": 170,
              "position": "absolute",
              "top": 8,
              "width": 612,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Component
              style={
                Object {
                  "color": "white",
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 36,
                  "lineHeight": 80,
                  "textAlign": "center",
                }
              }
            >
              test
            </Component>,
            "onPress": [MockFunction],
            "style": Object {
              "backgroundColor": "rgb(226,1,119)",
              "borderColor": "rgb(226,1,119)",
              "borderRadius": 100,
              "borderWidth": 2,
              "height": 100,
              "justifyContent": "center",
              "shadowColor": "#95012b",
              "shadowOffset": Object {
                "height": 8,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
              "width": 612,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "test",
              "style": Object {
                "color": "white",
                "fontFamily": "Bariol-Regular",
                "fontSize": 36,
                "lineHeight": 80,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "test",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Button should render secondary button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    label="test"
    onPress={[MockFunction]}
    type="Secondary"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <Component
        style={
          Object {
            "color": "rgb(226,1,119)",
            "fontFamily": "Bariol-Regular",
            "fontSize": 36,
            "lineHeight": 80,
            "textAlign": "center",
          }
        }
      >
        test
      </Component>,
      "onPress": [MockFunction],
      "style": Object {
        "borderColor": "rgb(226,1,119)",
        "borderRadius": 100,
        "borderWidth": 2,
        "height": 100,
        "justifyContent": "center",
        "width": 612,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "test",
        "style": Object {
          "color": "rgb(226,1,119)",
          "fontFamily": "Bariol-Regular",
          "fontSize": 36,
          "lineHeight": 80,
          "textAlign": "center",
        },
      },
      "ref": null,
      "rendered": "test",
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Component
          style={
            Object {
              "color": "rgb(226,1,119)",
              "fontFamily": "Bariol-Regular",
              "fontSize": 36,
              "lineHeight": 80,
              "textAlign": "center",
            }
          }
        >
          test
        </Component>,
        "onPress": [MockFunction],
        "style": Object {
          "borderColor": "rgb(226,1,119)",
          "borderRadius": 100,
          "borderWidth": 2,
          "height": 100,
          "justifyContent": "center",
          "width": 612,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "test",
          "style": Object {
            "color": "rgb(226,1,119)",
            "fontFamily": "Bariol-Regular",
            "fontSize": 36,
            "lineHeight": 80,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "test",
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
